<resources>
    <string name="app_name">Story App Dicoding</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_menu">More Menu</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_story">create new story</string>
    <string name="storyImage">image %s</string>
    <string name="storyDescription">desc %s</string>
    <string name="storyName">name %s</string>
    <string name="image_detail">Image Detail</string>
    <string name="retry">Retry</string>
    <string name="data_not_loaded">Data not loaded</string>
    <string name="upload_story">Upload Story</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_view">Image View</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="logo">Logo</string>
    <string name="halo">Halo :)</string>
    <string name="login_desc">Silahkan login untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="havent_account">Belum punya akun ?</string>
    <string name="sign_up">Daftar</string>
    <string name="register_desc">Silahkan daftarkan dirimu</string>
    <string name="name">Nama</string>
    <string name="have_account">Sudah punya akun ?</string>
    <string name="storyapp">StoryApp</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="failed_permission">Tidak mendapatkan permission.</string>
    <string name="failed_picture">Gagal mengambil gambar.</string>
    <string name="failed_camera">Gagal membuka kamera</string>
    <string name="warning_description">Silakan masukkan deskripsi gambar terlebih dahulu.</string>
    <string name="warning_image">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="warning_password">Password terlalu pendek</string>
    <string name="failed_register">Gagal Mendaftar Akun</string>
    <string name="success_register">Register berhasil, silahkan login!</string>
    <string name="confirm_logout">Apakah Anda yakin ingin keluar akun?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
</resources>